--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "analyzing-technologies-app": {
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "analyzing-technologies-app"
+    }
+  },
+  "defaultProject": "analyzing-technologies-app",
+  "cli": {
+    "analytics": "e38252d1-fc2a-4cdd-a7f2-378785fdcc1e"
+  }
 }
